apm/apache-php/apache-php-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: apache-php
  namespace: forma-ludo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: quenec/apache-php
        name: apache
