apm/apache-php/apache-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-php
  namespace: forma-ludo
  labels:
    app: web
spec:
  ports:
    - port: 80
  selector:
    app: web
