apm/apache-php/ingresss-apache.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-php
  namespace: forma-ludo
  #annotations:
          #    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: agenda.ludovic.tech
      http:
        paths:
          - backend:
              service:
                name: apache-php
                port:
                  number: 80
            path: /
            pathType: Prefix
